--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -94,7 +94,7 @@ section.nl-section.nl-players.nl-create-team
                             p salary: $89000
                         div.nl-players-search
                             div.input-group
-                                input(type="text" class="form-control" placeholder="Search by player name")
+                                input(type="text" class="form-control" placeholder="Search")
                                 span.input-group-btn
                                     button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
@@ -142,11 +142,11 @@ section.nl-section.nl-players.nl-create-team
                                                 div.card-block
 
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -197,12 +197,14 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
                                                         div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
-                                                        div.col-6
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -251,11 +253,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -305,11 +307,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -359,11 +361,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -413,11 +415,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="headingSix")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -467,11 +469,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingSeven")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -521,11 +523,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="headingEight")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -575,11 +577,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseNine" class="collapse" role="tabpanel" aria-labelledby="headingNine")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -629,11 +631,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseTen" class="collapse" role="tabpanel" aria-labelledby="headingTen")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -683,11 +685,11 @@ section.nl-section.nl-players.nl-create-team
                                             div(id="collapseEleven" class="collapse" role="tabpanel" aria-labelledby="headingEleven")
                                                 div.card-block
                                                     div.row.align-items-center
+                                                        div.col-12
+                                                            p.text-center
+                                                                button.btn.btn-primary Draft
                                                         div.col-6
                                                             p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p.nl-pl-social
                                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
