--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -17,7 +17,7 @@ section.nl-section.nl-players.nl-create-team
                             p salary: $89000
                         div.nl-players-search
                             div.input-group
-                                input(type="text" class="form-control" placeholder="Search by player name")
+                                input(type="text" class="form-control" placeholder="Search")
                                 span.input-group-btn
                                     button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
@@ -25,13 +25,17 @@ section.nl-section.nl-players.nl-create-team
                         li.nav-item
                             a.nav-link.active(data-toggle="tab" href="#all" role="tab") All players
                         li.nav-item
-                            a.nav-link(data-toggle="tab" href="#gk" role="tab") GK
+                            a.nav-link(data-toggle="tab" href="#qb" role="tab") QB
                         li.nav-item
-                            a.nav-link(data-toggle="tab" href="#d" role="tab") D
+                            a.nav-link(data-toggle="tab" href="#rb" role="tab") RB
                         li.nav-item
-                            a.nav-link(data-toggle="tab" href="#m" role="tab") m
+                            a.nav-link(data-toggle="tab" href="#wr" role="tab") WR
                         li.nav-item
-                            a.nav-link(data-toggle="tab" href="#a" role="tab") A
+                            a.nav-link(data-toggle="tab" href="#te" role="tab") TE
+                        li.nav-item
+                            a.nav-link(data-toggle="tab" href="#k" role="tab") K
+                        li.nav-item
+                            a.nav-link(data-toggle="tab" href="#def" role="tab") DEF
 
 
                     div.tab-content
@@ -635,10 +639,14 @@ section.nl-section.nl-players.nl-create-team
 
 
 
-                        div.tab-pane(id="gk" role="tabpanel") TAB2
-                        div.tab-pane(id="d" role="tabpanel") TAB3
-                        div.tab-pane(id="m" role="tabpanel") TAB4
-                        div.tab-pane(id="a" role="tabpanel") TAB5
+                        div.tab-pane(id="qb" role="tabpanel") TAB2
+                        div.tab-pane(id="rb" role="tabpanel") TAB3
+                        div.tab-pane(id="wr" role="tabpanel") TAB4
+                        div.tab-pane(id="te" role="tabpanel") TAB5
+                        div.tab-pane(id="k" role="tabpanel") TAB4
+                        div.tab-pane(id="def" role="tabpanel") TAB5
+
+
 
             div.col-lg-4.nl-team-600
                 div.nl-team-info
