--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-my-teams
-    div.container
+    div.container.container-wider
         div.row
             div.col-md-12
                 h1 My teams
