--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -98,7 +98,7 @@ section.nl-section.nl-players
                         //    p other details go here
                         div.nl-players-search
                             div.input-group
-                                input(type="text" class="form-control" placeholder="Search by player name")
+                                input(type="text" class="form-control" placeholder="Search")
                                 span.input-group-btn
                                     button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
