--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -49,7 +49,7 @@ header.nl-header-log
 
                         div.collapse.navbar-collapse(id="navbarSupportedContent")
                             ul.navbar-nav.mr-auto
-                                li.nav-item
+                                li.nav-item.hidden-md-down
                                     a.nav-link
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <span>Sport</span> <img src="assets/img/ball.png" alt="#">
@@ -62,9 +62,9 @@ header.nl-header-log
                                 li.nav-item
                                     a.nav-link(href="#") HOME
                                 li.nav-item
-                                    a.nav-link(href="#") MY TEAMS+
+                                    a.nav-link(href="#") MY TEAMS
                                 li.nav-item
-                                    a.nav-link(href="#") CONTESTS+
+                                    a.nav-link(href="#") CONTESTS
                                 li.nav-item
                                     a.nav-link(href="#") PLAYERS
                                 li.nav-item
@@ -74,7 +74,7 @@ header.nl-header-log
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <img alt="" src="assets/img/flag/USA.png">
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
-                                        a.dropdown-item(href="#") <img alt="" src="assets/img/flag/France.png">
+                                        a.dropdown-item(href="#") France
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/Spain.png">
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/Germany.png">
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/USA.png">
